--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-mdl/core": "^4.0.3",
+    "@angular-mdl/datepicker": "0.0.2",
+    "@angular-mdl/popover": "^0.6.3",
+    "@angular-mdl/select": "^0.10.4",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.0.0",
@@ -21,7 +25,9 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
+    "moment": "^2.18.1",
     "rxjs": "^5.1.0",
+    "web-animations-js": "^2.2.5",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
