--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
+    "mdn-polyfills": "^2.2.0",
     "moment": "^2.18.1",
     "rxjs": "^5.1.0",
     "web-animations-js": "^2.2.5",
