--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -4,7 +4,7 @@
         "name": "Speaker Identifiction System",
         "info": "Mfcc feature extraction, LBGVQ",
         "year":"2015",
-        "logo":"assets/img/angular.png",
+        "logo":"assets/img/speaker.jpg",
         "link":"https://angular.io/",
         "detail":[
             "Platform for building mobile and desktop web applications..."]
@@ -13,9 +13,9 @@
         "id": "102",
         "name": "Brain Computer Interface Design for EEG signal",
         "location":"G.S. Sanyal School of Telecommunications",
-        "info": "Mfcc feature extraction, LBGVQ",
+        "info": "Blink Detection form neurosky device.",
         "year": "2014",
-        "logo":"assets/img/angular.png",
+        "logo":"assets/img/neurosky_eeg.png",
         "link":"https://angular.io/",
         "detail": [
             "Designed a BCI application (in JAVA), which was used as a user-interface for computer application.",
@@ -29,7 +29,7 @@
         "location":"MHRD, India",
         "info": "OpenGLES, Box2d Physics",
         "year": "2013",
-        "logo":"assets/img/angular.png",
+        "logo":"assets/img/box2d-logo.png",
         "link":"https://angular.io/",
         "detail":[
             "Used openGL ES 2.0 API for 2D Graphical Simulation and BOX2D API for Physics Engine."
