--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@ngui/map": "^0.18.1",
+    "@types/googlemaps": "^3.26.11",
     "core-js": "^2.4.1",
     "mdn-polyfills": "^2.2.0",
     "moment": "^2.18.1",
